# snake-gym

./: pyproject.toml
gym_snake/envs/: snake_env.py
